--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="intro-header">
         <div class="container">
            <div class="intro-message">
-             <img id='cys__photo' src= './profilephoto.jpeg' />
-             <h1 class="animated bounceInDown">陈亦沙</h1>
-             <h3> Hello, world. </h3>
+             <img id='cys__photo' src= './profilephoto.jpg' />
+             <h1 class="animated bounceInDown">阮聪</h1>
+             <h3> Hello, world! </h3>
             </div>
             <div id="particles-js"></div>
            </div>
