--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h1 class="section-heading">关于我</h1>
-                    <a href='https://github.com/yisha0307' target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <p class="lead"><strong>Not a boring person</strong></p>
+                    <p class="lead"><strong>Not a boring person.</strong></p>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
                       <img class ='icon' src= './imgs/icon_graduate.png'/>
                         <p class='intro_p'>来自网络空间安全学院</p>
