--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="1">
           <ul class="nav navbar-nav">
               <li class="active"><p id="menuTextLeft" class="option1 navbar-text navbar-left">关于我</p></li>
-              <li><p id="menuTextLeft" class="option2 navbar-text navbar-left">作品展示</p></li>
+              <li><p id="menuTextLeft" class="option2 navbar-text navbar-left">我的兴趣</p></li>
               <li><p id="menuTextLeft" class="option3 navbar-text navbar-left">技术文章</p></li>
               <li><p id="menuTextLeft" class="option5 navbar-text navbar-left">联系我</p></li>
 
@@ -74,16 +74,6 @@
         </div>
     </div>
 
-    <div class = 'skills intro-row'>
-      <div class ='container-fluid'>
-        <h3>开发技能   <span>HTML  |   CSS  |   Javascript   |   ES6  |  React  |   Redux  |  webpack  |  ant.D  |  SASS</span></h3>
-      </div>
-    </div>
-    <div class = 'hobby intro-row'>
-      <div class ='container-fluid'>
-        <h3>兴趣爱好   <span>前端开发  |   健身  |   旅行   |   电影   |   口红</span></h3>
-      </div>
-    </div>
     </div>
     <!-- /.content-section-b -->
   <div id='showskill'>
