--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h1 class="section-heading">关于我</h1>
                     <p class="lead"><strong>Not a boring person.</strong></p>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                      <img class ='icon' src= './imgs/icon_college.jpg'/>
+                      <img class ='icon' src= './imgs/icon_college.png'/>
                         <p class='intro_p'>来自网络空间安全学院</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
