--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
                         <p class='intro_p'>来自网络空间安全学院</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                      <img class ='icon' src= './imgs/icon_page.png'/>
-                      <p class='intro_p'>自学前端出身的野生开发</p>
+                      <img class ='icon' src= './imgs/icon_party.jpg'/>
+                      <p class='intro_p'>中共预备党员</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
                       <img class ='icon' src= './imgs/icon_com.png'/>
-                      <p class='intro_p'>工作一年有余~</p>
+                      <p class='intro_p'>校青马本科生培养班学员~</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
                       <img class ='icon' src= './imgs/icon_study.png'/>
-                      <p class='intro_p'>咱们可以面试详聊♥</p>
+                      <p class='intro_p'>毕业于华中师大一附中</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <h1 class="section-heading">网页效果</h1>
+                    <h1 class="section-heading">我的兴趣</h1>
 
 
                     <p class="lead">我喜欢用react写一些漂亮的组件。</p>
