--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
                       <img class ='icon' src= './imgs/icon_com.png'/>
-                      <p class='intro_p'>校青马本科生培养班学员~</p>
+                      <p class='intro_p'>校青马本科生培养班学员</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
                       <img class ='icon' src= './imgs/icon_study.png'/>
