--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                       <p class='intro_p'>中共预备党员</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                      <img class ='icon' src= './imgs/icon_com.png'/>
+                      <img class ='icon' src= './imgs/icon_YM.jpg'/>
                       <p class='intro_p'>校青马本科生培养班学员</p>
                     </div>
                     <div class = "col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                      <img class ='icon' src= './imgs/icon_study.png'/>
+                      <img class ='icon' src= './imgs/icon_hsy.jpg'/>
                       <p class='intro_p'>毕业于华中师大一附中</p>
                     </div>
                 </div>
