--- a/index.html
+++ b/index.html
@@ -86,16 +86,15 @@
                     <h1 class="section-heading">我的兴趣</h1>
 
 
-                    <p class="lead">我喜欢用react写一些漂亮的组件。</p>
+                    <p class="lead">爱好是人生的调节剂，也是生活的“避难所”。</p>
 
 
                 </div>
             </div>
       <div class="container-imgs cf">
             <div class="boxes boxes-sm">
-              <a target='_blank' href="https://github.com/yisha0307/Daily-Practice/tree/master/React/slide-to-open">
-                <img class="sm-image" src="imgs/slide.jpg" alt="..." />
-                <div class='overlay overlay-sm'><p>Slide To Open</p></div>
+                <img class="sm-image" src="imgs/icon_film.png" alt="..." />
+                <div class='overlay overlay-sm'><p>不要温和地走进那个良夜。</p></div>
               </a>
              </div>
              <div class="boxes boxes-sm">
