--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
               </a>
              </div>
              <div class="boxes boxes-sm">
-                <a target='_blank' href="https://github.com/yisha0307/IFE-baidu/tree/master/task037">
-                  <img  class="sm-image" src="imgs/log-pand.jpg" alt="...">
-                  <div class='overlay overlay-sm'><p>登录框</p></div>
+                  <img  class="sm-image" src="imgs/icon_reading.jpg" alt="...">
+                  <div class='overlay overlay-sm'><p>书中自有黄金屋。</p></div>
                 </a>
             </div>
             <div class="boxes boxes-sm">
