--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@
                 </a>
             </div>
             <div class="boxes boxes-sm">
-              <a target='_blank' href="https://github.com/yisha0307/Daily-Practice/tree/master/React/date-picker">
-                <img class="sm-image" src="imgs/calendar.jpg" alt="...">
-                <div class='overlay overlay-sm'><p>日历</p></div>
+                <img class="sm-image" src="imgs/icon_game.jpg" alt="...">
+                <div class='overlay overlay-sm'><p>在苦难摇篮里怒号光明。</p></div>
               </a>
             </div>
             <div class="boxes boxes-sm">
