--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <div class="boxes boxes-sm">
-                <img class="sm-image" src="imgs/icon_game.jpg" alt="...">
+                <img class="sm-image" src="imgs/icon_game.png" alt="...">
                 <div class='overlay overlay-sm'><p>在苦难摇篮里怒号光明。</p></div>
               </a>
             </div>
