--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
               </a>
             </div>
             <div class="boxes boxes-sm">
-              <a target='_blank' href="https://github.com/yisha0307/Daily-Practice/tree/master/React/Referral-form">
-                <img class="sm-image" src="imgs/form.jpg" alt="...">
-                <div class='overlay overlay-sm'><p>表单</p></div>
+                <img class="sm-image" src="imgs/icon_music.png" alt="...">
+                <div class='overlay overlay-sm'><p>后知后觉我该好好生活。</p></div>
               </a>
             </div>
 
