--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <ul class="nav navbar-nav">
               <li class="active"><p id="menuTextLeft" class="option1 navbar-text navbar-left">关于我</p></li>
               <li><p id="menuTextLeft" class="option2 navbar-text navbar-left">我的兴趣</p></li>
-              <li><p id="menuTextLeft" class="option3 navbar-text navbar-left">技术文章</p></li>
-              <li><p id="menuTextLeft" class="option5 navbar-text navbar-left">联系我</p></li>
+              <li><p id="menuTextLeft" class="option3 navbar-text navbar-left">研支团大家庭</p></li>
+              <li><p id="menuTextLeft" class="option5 navbar-text navbar-left">成为挚友</p></li>
 
           </ul>
       </div>
@@ -113,9 +113,6 @@
               </a>
             </div>
 
-        </div>
-       <a target='_blank' href="https://github.com/yisha0307"><button id="button" class="btn btn-success btn-lg"> <i class="fa fa-github" aria-hidden="true"></i> See on Github</button></a>
-        </div>
         <!-- /.container -->
 
     </div>
@@ -133,8 +130,8 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <h1>技术文章</h1>
-                    <p class="lead">我喜欢用写文章的方式记录学习，也希望帮到别人。</p>
+                    <h1>很幸运加入研支团大家庭</h1>
+                    <p class="lead">到西部去，到基层去，到祖国和人民最需要的地方去。</p>
 
 
                 </div>
@@ -176,7 +173,7 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <h1 class="section-heading">联系我</h1>
+                    <h1 class="section-heading">希望与大家成为挚友，共同进步</h1>
                    <p class="lead" id='lead-1'><i class="fa fa-phone-square"></i> 159-2175-5975</p>
                    <p class="lead"> <i class='fa fa-envelope-open'></i> chenyisha37@126.com</p>
 
