--- a/index.html
+++ b/index.html
@@ -139,26 +139,20 @@
         <div class="container-imgs cf">
             <div class="boxes boxes-md">
               <a target='_blank' href="https://segmentfault.com/a/1190000008257732">
-                <img class="md-image" src="imgs/webpack.jpg" alt="..." />
-                <div class='overlay overlay-md'><p>webpack+react项目初体验——<br/>记录我的webpack环境配置</p></div>
+                <img class="md-image" src="imgs/icon_1.jpg" alt="..." />
               </a>
              </div>
              <div class="boxes boxes-md">
                 <a target='_blank' href="https://segmentfault.com/a/1190000008480601">
-                  <img  class="md-image" src="imgs/reactRedux.jpg" alt="...">
-                  <div class='overlay overlay-md'><p>一个简单邮箱应用的实现：使用react+redux+webpack+css-modules</p></div>
+                  <img  class="md-image" src="imgs/icon_2.jpg" alt="...">
                 </a>
             </div>
             <div class="boxes boxes-md">
               <a target='_blank' href="https://segmentfault.com/a/1190000008574028">
-                <img class="md-image" src="imgs/json-server.jpg" alt="...">
-                <div class='overlay overlay-md'><p>介绍两大神器！——使用json-server和faker.js模拟REST API</p></div>
+                <img class="md-image" src="imgs/icon_3.jpg" alt="...">
               </a>
             </div>
 
-        </div>
-       <a target='_blank' href="https://segmentfault.com/u/yisha0307"><button id="button" class="animated infinite pulse btn btn-success btn-lg"> <i class="icon fa fa-medium" aria-hidden="true"></i> See on Segmentfault</button></a>
-        </div>
         <!-- /.container -->
 
     </div>
