--- a/index.html
+++ b/index.html
@@ -168,14 +168,13 @@
                 <div class="col-lg-12">
 
                     <h1 class="section-heading">希望与大家成为挚友，共同进步</h1>
-                   <p class="lead" id='lead-1'><i class="fa fa-phone-square"></i> 159-2175-5975</p>
-                   <p class="lead"> <i class='fa fa-envelope-open'></i> chenyisha37@126.com</p>
+                   <p class="lead" id='lead-1'><i class="fa fa-group"></i> qq:2995709898</p>
+                   <p class="lead"> <i class='fa fa-comments-o'></i> vx:rc15797380089</p>
 
 
                 </div>
             </div>
 
-      <a id="hire" href="mailto:chenyisha37@126.com"><button id="button" class="animated infinite pulse btn btn-success btn-lg"> <i class="icon fa fa-check" aria-hidden="true"></i>Hire</button></a>
 
         </div>
         </div>
