--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="col-lg-12">
 
                     <h1 class="section-heading">希望与大家成为挚友，共同进步</h1>
-                   <p class="lead" id='lead-1'>   <i class="fa fa-group"></i> qq:2995709898</p>
+                   <p class="lead"> <i class="fa fa-group"></i> qq:2995709898</p>
                    <p class="lead"> <i class='fa fa-comments-o'></i> vx:rc15797380089</p>
 
 
